--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Calc</title>
    <link href="styles.css" rel="stylesheet" />
+   <link rel="icon" href="favicon.ico">
    <script src="script.js" defer></script>
 </head>
 
