Add dark/light mode

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <button data-number>0</button>
       <button data-equals class="span-two">=</button>
    </div>
+   <button data-theme-toggle class="toggle-button">Dark/Light mode</button>
 </body>
 
 </html>
