--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <button data-number>8</button>
       <button data-number>9</button>
       <button data-operation>-</button>
-      <button data-number>.</button>
+      <button data-theme-toggle>D/L</button>
       <button data-number>0</button>
-      <button data-equals class="span-two">=</button>
+      <button data-number>.</button>
+      <button data-equals>=</button>
    </div>
-   <button data-theme-toggle class="toggle-button">Dark/Light mode</button>
 </body>
 
 </html>
