--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
          <div data-previous-operand class="previous-operand"></div>
          <div data-current-operand class="current-operand"></div>
       </div>
-      <button data-all-clear class="span-two">AC</button>
-      <button data-delete>DEL</button>
+      <button data-all-clear>AC</button>
+      <button data-delete>C</button>
+      <button data-plusminus-sign>+/-</button>
       <button data-operation>/</button>
       <button data-number>1</button>
       <button data-number>2</button>
