Add favicon and fix name-typo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <title>Calc</title>
    <link href="styles.css" rel="stylesheet" />
    <link rel="icon" href="favicon.ico">
-   <script type="module" src="calculator.js" defer></script>
+   <script type="module" src="Calculator.js" defer></script>
    <script type="module" src="script.js" defer></script>
 </head>
 
