--- a/src/template.html
+++ b/src/template.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calc</title>
-    <link href="styles.css" rel="stylesheet" />
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="icon" href="favicon.ico" />
-    <script type="module" src="index.js" defer></script>
   </head>
 
   <body>
